<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_item_drink_list"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:contentDescription="@string/item_drink_list"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:background="@color/colorBlack"
            android:contentDescription="@string/item_drink_list_shadow"
            android:alpha="0.2" />

        <TextView
            android:id="@+id/tv_item_name_drink_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textLocale="en"
            android:singleLine="true"
            tools:text="Abbey Martini"
            android:layout_marginBottom="36dp"
            android:layout_gravity="bottom|start"
            tools:targetApi="q" />

        <TextView
            android:id="@+id/tv_item_filter_drink_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="15sp"
            android:textStyle="italic"
            tools:text="Cocktail"
            android:layout_marginBottom="16dp"
            android:layout_gravity="bottom|start"/>

    </FrameLayout>

</androidx.cardview.widget.CardView>